--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body{
 /* Header image*/
 .header-image{
     background-image: linear-gradient(rgba(23,0,10, 0.7 ), rgba(0,20,0, 
-    0.7)),url(../img/image1.jpg);
+    0.7)),url(../img/image.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -134,7 +134,7 @@ body{
 }
 
 .ways-to-travel:nth-child(2) {
-    margin-top: 30px;
+    margin-top: 0px;
 }
 
 .ways-to-travel h3{
@@ -151,3 +151,39 @@ body{
     margin-top: 10px;
     color: #222f3e;
 }
+
+/* -----------------------
+        City Gallery
+------------------------*/
+.city-images{
+    padding-top: 40px;
+    background-color: #1dd1a1;
+    color: #222f3e;
+}
+
+.images-of-cities{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.city-image{
+    width: 29%;
+    margin-bottom: 25px;
+    background-color: #fbfbfb;
+}
+
+.city-image img{
+    width: 100%;
+}
+
+.city-image h3{
+    padding: 15px;
+}
+
+.city-image p{
+    padding: 0 15px 10px 15px;
+    padding-bottom: 3px;
+}
+
+
