--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,12 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.headii{
+    text-align: center;
 }
 
 .city-image{
